Working Clarifai Android App

--- a/clarifai-android-starter/app/src/main/res/layout/view_recognize.xml
+++ b/clarifai-android-starter/app/src/main/res/layout/view_recognize.xml
@@ -28,13 +28,6 @@
                 android:layout_height="match_parent"
                 >
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="@string/upload_image_hint"
-                    />
-
                 <ProgressBar
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -61,7 +54,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:src="@android:drawable/ic_menu_upload"
+        android:src="@android:drawable/ic_menu_camera"
         />
 
 </merge>
