--- a/clarifai-android-starter/app/src/main/res/layout/view_recognize.xml
+++ b/clarifai-android-starter/app/src/main/res/layout/view_recognize.xml
@@ -15,6 +15,13 @@
             android:padding="16dp"
             />
 
+        <TextView
+            android:id="@+id/resultTrashType"
+            android:textSize="16pt"
+            android:textAlignment="center"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+
 
         <FrameLayout
             android:layout_width="match_parent"
