--- a/clarifai-android-starter/app/src/main/res/layout/view_recognize.xml
+++ b/clarifai-android-starter/app/src/main/res/layout/view_recognize.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:background="@drawable/background"
         >
 
         <android.support.v7.widget.RecyclerView
@@ -18,6 +20,7 @@
         <TextView
             android:id="@+id/resultTrashType"
             android:textSize="16pt"
+            android:fontFamily="sans-serif"
             android:textAlignment="center"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
@@ -57,7 +60,7 @@
         android:id="@+id/fab"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_gravity="end|bottom"
+        android:layout_gravity="center|bottom"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
