--- a/clarifai-android-starter/app/src/main/res/values/colors.xml
+++ b/clarifai-android-starter/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#333333</color>
+    <color name="white">#000000</color>
 </resources>
