--- a/clarifai-android-starter/app/src/main/res/layout/view_recognize.xml
+++ b/clarifai-android-starter/app/src/main/res/layout/view_recognize.xml
@@ -21,6 +21,7 @@
             android:id="@+id/resultTrashType"
             android:textSize="16pt"
             android:fontFamily="sans-serif"
+            android:textColor="@color/white"
             android:textAlignment="center"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
